# TelegramNotifier

./: .gitignore  Procfile  README.md  add_login_required.sh  app.py  auto_import_demo.py  check_db.py  check_logs.py  check_sent_message.py  check_students.py  check_tables.py  config.py  create_coaches.py  daily_automation.py  excel_processor.py  extensions.py  forms.py  get_group_id.py  import_students.py  init_db.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  routes.py  scheduler.py  styles CSS pour l'accessibilité et la cohérence visuelle  sync_telegram_students.py  telegram_bot.py  test_bot.py  test_data.py  update_group_ids.py  update_scenario_model.py  zoom_api.py
attached_assets/: Kodjo English - Classes Schedules (1).xlsx  Pasted--Fonctionnalit-de-Simulation-D-mo-Test-1-Objectif-Permettre-de-t-1741711527377.txt  Pasted--R-sum-du-Bot-Telegram-de-Gestion-de-Cours-avec-Dashboard-Admin-Flask-Ce-projet-cons-1741710691264.txt  Pasted-Oui-c-est-tout-fait-possible-et-a-ajouterait-m-me-une-dimension-ludique-et-motivante-pour-les-pa-1741711516480.txt
instance/: courses.db  telegram_notifier.db
routes/: __init__.py  admin.py  api.py  auth.py  main.py
templates/: 404.html  500.html  add_scenario.html  admin_users.html  analytics.html  analytics_tabbed.html  bot_status.html  change_password.html  courses.html  dashboard.html  edit_scenario.html  index.html  layout.html  login.html  logs.html  rankings.html  register.html  scenarios.html  simulation.html  students.html  telegram_groups.html  zoom_links.html
utils/: notifications.py  (+1 more)
(+19 files in other folders)
